argocd/menifests/grafana-httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - grafana.cbc.com
  rules:
  - backendRefs:
    - name: grafana
      port: 80
