argocd/menifests/passwordapp-httproute.yaml
# Domain Based Routing

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: passwordapp-route
  namespace: passwordapp
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - passworapp.cbc.com
  rules:
    backendRefs:
    - name: passwordapp
      port: 80

# Path Based Routing

# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: passwordapp-route
#   namespace: passwordapp
# spec:
#   parentRefs:
#     - name: envoy-gateway
#       namespace: envoy-system
#   hostnames:
#     - cbc.com
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /passwordapp
#       backendRefs:
#         - name: passwordapp
#           port: 80
