argocd/menifests/prometheus-httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - prometheus.cbc.com
  rules:
  - backendRefs:
    - name: prometheus-server
      port: 80
